src/antlr/uriscvParser.js
// Generated from C:/Development/Repository/urisc-v/src/grammar/uriscv.g4 by ANTLR 4.13.2
// jshint ignore: start
import antlr4 from 'antlr4';
import uriscvListener from './uriscvListener.js';
import uriscvVisitor from './uriscvVisitor.js';



const atn = new antlr4.atn.ATNDeserializer().deserialize(serializedATN);

const decisionsToDFA = atn.decisionToState.map( (ds, index) => new antlr4.dfa.DFA(ds, index) );

const sharedContextCache = new antlr4.atn.PredictionContextCache();

export default class uriscvParser extends antlr4.Parser {

    static grammarFileName = "uriscv.g4";
    static literalNames = [ null, "'LW'", "','", "'SW'", "'SUB'", "'ADD'", 
                            "'ADDI'", "'SLT'", "'SLTI'", "'SLL'", "'SLLI'", 
                            "'AND'", "'ANDI'", "'OR'", "'ORI'", "'BEQ'", 
                            "'BNE'", "'BLT'", "'BGE'", "'('", "')'", "':'", 
                            "'.word'" ];
    static symbolicNames = [ null, null, null, null, null, null, null, null, 
                             null, null, null, null, null, null, null, null, 
                             null, null, null, null, null, null, "WORD_DIRECTIVE", 
                             "REGISTER", "LABEL", "HEX_NUMBER", "DEC_NUMBER", 
                             "COMMENT", "WS", "NEWLINE" ];
    static ruleNames = [ "program", "line", "directive", "wordValue", "instruction", 
                         "lw", "sw", "sub", "add", "addi", "slt", "slti", 
                         "sll", "slli", "andInstr", "andi", "orInstr", "ori", 
                         "beq", "bne", "blt", "bge", "register", "immediate", 
                         "shamt", "offsetBase", "labelDef", "label" ];

    constructor(input) {
        super(input);
        this._interp = new antlr4.atn.ParserATNSimulator(this, atn, decisionsToDFA, sharedContextCache);
        this.ruleNames = uriscvParser.ruleNames;
        this.literalNames = uriscvParser.literalNames;
        this.symbolicNames = uriscvParser.symbolicNames;
    }



	program() {
	    let localctx = new ProgramContext(this, this._ctx, this.state);
	    this.enterRule(localctx, 0, uriscvParser.RULE_program);
	    var _la = 0;
	    try {
	        this.enterOuterAlt(localctx, 1);
	        this.state = 59;
	        this._errHandler.sync(this);
	        _la = this._input.LA(1);
	        while((((_la) & ~0x1f) === 0 && ((1 << _la) & 692584442) !== 0)) {
	            this.state = 56;
	            this.line();
	            this.state = 61;
	            this._errHandler.sync(this);
	            _la = this._input.LA(1);
	        }
	        this.state = 62;
	        this.match(uriscvParser.EOF);
	    } catch (re) {
	    	if(re instanceof antlr4.error.RecognitionException) {
		        localctx.exception = re;
		        this._errHandler.reportError(this, re);
		        this._errHandler.recover(this, re);
		    } else {
		    	throw re;
		    }
	    } finally {
	        this.exitRule();
	    }
	    return localctx;
	}



	line() {
	    let localctx = new LineContext(this, this._ctx, this.state);
	    this.enterRule(localctx, 2, uriscvParser.RULE_line);
	    try {
	        this.state = 76;
	        this._errHandler.sync(this);
	        switch(this._input.LA(1)) {
	        case 22:
	            this.enterOuterAlt(localctx, 1);
	            this.state = 64;
	            this.directive();
	            this.state = 65;
	            this.match(uriscvParser.NEWLINE);
	            break;
	        case 1:
	        case 3:
	        case 4:
	        case 5:
	        case 6:
	        case 7:
	        case 8:
	        case 9:
	        case 10:
	        case 11:
	        case 12:
	        case 13:
	        case 14:
	        case 15:
	        case 16:
	        case 17:
	        case 18:
	            this.enterOuterAlt(localctx, 2);
	            this.state = 67;
	            this.instruction();
	            this.state = 68;
	            this.match(uriscvParser.NEWLINE);
	            break;
	        case 24:
	            this.enterOuterAlt(localctx, 3);
	            this.state = 70;
	            this.labelDef();
	            this.state = 71;
	            this.match(uriscvParser.NEWLINE);
	            break;
	        case 27:
	            this.enterOuterAlt(localctx, 4);
	            this.state = 73;
	            this.match(uriscvParser.COMMENT);
	            this.state = 74;
	            this.match(uriscvParser.NEWLINE);
	            break;
	        case 29:
	            this.enterOuterAlt(localctx, 5);
	            this.state = 75;
	            this.match(uriscvParser.NEWLINE);
	            break;
	        default:
	            throw new antlr4.error.NoViableAltException(this);
	        }
	    } catch (re) {
	    	if(re instanceof antlr4.error.RecognitionException) {
		        localctx.exception = re;
		        this._errHandler.reportError(this, re);
		        this._errHandler.recover(this, re);
		    } else {
		    	throw re;
		    }
	    } finally {
	        this.exitRule();
	    }
	    return localctx;
	}



	directive() {
	    let localctx = new DirectiveContext(this, this._ctx, this.state);
	    this.enterRule(localctx, 4, uriscvParser.RULE_directive);
	    var _la = 0;
	    try {
	        this.enterOuterAlt(localctx, 1);
	        this.state = 78;
	        this.match(uriscvParser.WORD_DIRECTIVE);
	        this.state = 80; 
	        this._errHandler.sync(this);
	        _la = this._input.LA(1);
	        do {
	            this.state = 79;
	            this.match(uriscvParser.WS);
	            this.state = 82; 
	            this._errHandler.sync(this);
	            _la = this._input.LA(1);
	        } while(_la===28);
	        this.state = 84;
	        this.wordValue();
	    } catch (re) {
	    	if(re instanceof antlr4.error.RecognitionException) {
		        localctx.exception = re;
		        this._errHandler.reportError(this, re);
		        this._errHandler.recover(this, re);
		    } else {
		    	throw re;
		    }
	    } finally {
	        this.exitRule();
	    }
	    return localctx;
	}



	wordValue() {
	    let localctx = new WordValueContext(this, this._ctx, this.state);
	    this.enterRule(localctx, 6, uriscvParser.RULE_wordValue);
	    var _la = 0;
	    try {
	        this.enterOuterAlt(localctx, 1);
	        this.state = 86;
	        _la = this._input.LA(1);
	        if(!(_la===25 || _la===26)) {
	        this._errHandler.recoverInline(this);
	        }
	        else {
	        	this._errHandler.reportMatch(this);
	            this.consume();
	        }
	    } catch (re) {
	    	if(re instanceof antlr4.error.RecognitionException) {
		        localctx.exception = re;
		        this._errHandler.reportError(this, re);
		        this._errHandler.recover(this, re);
		    } else {
		    	throw re;
		    }
	    } finally {
	        this.exitRule();
	    }
	    return localctx;
	}



	instruction() {
	    let localctx = new InstructionContext(this, this._ctx, this.state);
	    this.enterRule(localctx, 8, uriscvParser.RULE_instruction);
	    try {
	        this.state = 105;
	        this._errHandler.sync(this);
	        switch(this._input.LA(1)) {
	        case 1:
	            this.enterOuterAlt(localctx, 1);
	            this.state = 88;
	            this.lw();
	            break;
	        case 3:
	            this.enterOuterAlt(localctx, 2);
	            this.state = 89;
	            this.sw();
	            break;
	        case 4:
	            this.enterOuterAlt(localctx, 3);
	            this.state = 90;
	            this.sub();
	            break;
	        case 5:
	            this.enterOuterAlt(localctx, 4);
	            this.state = 91;
	            this.add();
	            break;
	        case 6:
	            this.enterOuterAlt(localctx, 5);
	            this.state = 92;
	            this.addi();
	            break;
	        case 7:
	            this.enterOuterAlt(localctx, 6);
	            this.state = 93;
	            this.slt();
	            break;
	        case 8:
	            this.enterOuterAlt(localctx, 7);
	            this.state = 94;
	            this.slti();
	            break;
	        case 9:
	            this.enterOuterAlt(localctx, 8);
	            this.state = 95;
	            this.sll();
	            break;
	        case 10:
	            this.enterOuterAlt(localctx, 9);
	            this.state = 96;
	            this.slli();
	            break;
	        case 11:
	            this.enterOuterAlt(localctx, 10);
	            this.state = 97;
	            this.andInstr();
	            break;
	        case 12:
	            this.enterOuterAlt(localctx, 11);
	            this.state = 98;
	            this.andi();
	            break;
	        case 13:
	            this.enterOuterAlt(localctx, 12);
	            this.state = 99;
	            this.orInstr();
	            break;
	        case 14:
	            this.enterOuterAlt(localctx, 13);
	            this.state = 100;
	            this.ori();
	            break;
	        case 15:
	            this.enterOuterAlt(localctx, 14);
	            this.state = 101;
	            this.beq();
	            break;
	        case 16:
	            this.enterOuterAlt(localctx, 15);
	            this.state = 102;
	            this.bne();
	            break;
	        case 17:
	            this.enterOuterAlt(localctx, 16);
	            this.state = 103;
	            this.blt();
	            break;
	        case 18:
	            this.enterOuterAlt(localctx, 17);
	            this.state = 104;
	            this.bge();
	            break;
	        default:
	            throw new antlr4.error.NoViableAltException(this);
	        }
	    } catch (re) {
	    	if(re instanceof antlr4.error.RecognitionException) {
		        localctx.exception = re;
		        this._errHandler.reportError(this, re);
		        this._errHandler.recover(this, re);
		    } else {
		    	throw re;
		    }
	    } finally {
	        this.exitRule();
	    }
	    return localctx;
	}



	lw() {
	    let localctx = new LwContext(this, this._ctx, this.state);
	    this.enterRule(localctx, 10, uriscvParser.RULE_lw);
	    var _la = 0;
	    try {
	        this.enterOuterAlt(localctx, 1);
	        this.state = 107;
	        this.match(uriscvParser.T__0);
	        this.state = 109; 
	        this._errHandler.sync(this);
	        _la = this._input.LA(1);
	        do {
	            this.state = 108;
	            this.match(uriscvParser.WS);
	            this.state = 111; 
	            this._errHandler.sync(this);
	            _la = this._input.LA(1);
	        } while(_la===28);
	        this.state = 113;
	        this.register();
	        this.state = 114;
	        this.match(uriscvParser.T__1);
	        this.state = 118;
	        this._errHandler.sync(this);
	        _la = this._input.LA(1);
	        while(_la===28) {
	            this.state = 115;
	            this.match(uriscvParser.WS);
	            this.state = 120;
	            this._errHandler.sync(this);
	            _la = this._input.LA(1);
	        }
	        this.state = 121;
	        this.offsetBase();
	    } catch (re) {
	    	if(re instanceof antlr4.error.RecognitionException) {
		        localctx.exception = re;
		        this._errHandler.reportError(this, re);
		        this._errHandler.recover(this, re);
		    } else {
		    	throw re;
		    }
	    } finally {
	        this.exitRule();
	    }
	    return localctx;
	}



	sw() {
	    let localctx = new SwContext(this, this._ctx, this.state);
	    this.enterRule(localctx, 12, uriscvParser.RULE_sw);
	    var _la = 0;
	    try {
	        this.enterOuterAlt(localctx, 1);
	        this.state = 123;
	        this.match(uriscvParser.T__2);
	        this.state = 125; 
	        this._errHandler.sync(this);
	        _la = this._input.LA(1);
	        do {
	            this.state = 124;
	            this.match(uriscvParser.WS);
	            this.state = 127; 
	            this._errHandler.sync(this);
	            _la = this._input.LA(1);
	        } while(_la===28);
	        this.state = 129;
	        this.register();
	        this.state = 130;
	        this.match(uriscvParser.T__1);
	        this.state = 134;
	        this._errHandler.sync(this);
	        _la = this._input.LA(1);
	        while(_la===28) {
	            this.state = 131;
	            this.match(uriscvParser.WS);
	            this.state = 136;
	            this._errHandler.sync(this);
	            _la = this._input.LA(1);
	        }
	        this.state = 137;
	        this.offsetBase();
	    } catch (re) {
	    	if(re instanceof antlr4.error.RecognitionException) {
		        localctx.exception = re;
		        this._errHandler.reportError(this, re);
		        this._errHandler.recover(this, re);
		    } else {
		    	throw re;
		    }
	    } finally {
	        this.exitRule();
	    }
	    return localctx;
	}



	sub() {
	    let localctx = new SubContext(this, this._ctx, this.state);
	    this.enterRule(localctx, 14, uriscvParser.RULE_sub);
	    var _la = 0;
	    try {
	        this.enterOuterAlt(localctx, 1);
	        this.state = 139;
	        this.match(uriscvParser.T__3);
	        this.state = 141; 
	        this._errHandler.sync(this);
	        _la = this._input.LA(1);
	        do {
	            this.state = 140;
	            this.match(uriscvParser.WS);
	            this.state = 143; 
	            this._errHandler.sync(this);
	            _la = this._input.LA(1);
	        } while(_la===28);
	        this.state = 145;
	        this.register();
	        this.state = 146;
	        this.match(uriscvParser.T__1);
	        this.state = 150;
	        this._errHandler.sync(this);
	        _la = this._input.LA(1);
	        while(_la===28) {
	            this.state = 147;
	            this.match(uriscvParser.WS);
	            this.state = 152;
	            this._errHandler.sync(this);
	            _la = this._input.LA(1);
	        }
	        this.state = 153;
	        this.register();
	        this.state = 154;
	        this.match(uriscvParser.T__1);
	        this.state = 158;
	        this._errHandler.sync(this);
	        _la = this._input.LA(1);
	        while(_la===28) {
	            this.state = 155;
	            this.match(uriscvParser.WS);
	            this.state = 160;
	            this._errHandler.sync(this);
	            _la = this._input.LA(1);
	        }
	        this.state = 161;
	        this.register();
	    } catch (re) {
	    	if(re instanceof antlr4.error.RecognitionException) {
		        localctx.exception = re;
		        this._errHandler.reportError(this, re);
		        this._errHandler.recover(this, re);
		    } else {
		    	throw re;
		    }
	    } finally {
	        this.exitRule();
	    }
	    return localctx;
	}



	add() {
	    let localctx = new AddContext(this, this._ctx, this.state);
	    this.enterRule(localctx, 16, uriscvParser.RULE_add);
	    var _la = 0;
	    try {
	        this.enterOuterAlt(localctx, 1);
	        this.state = 163;
	        this.match(uriscvParser.T__4);
	        this.state = 165; 
	        this._errHandler.sync(this);
	        _la = this._input.LA(1);
	        do {
	            this.state = 164;
	            this.match(uriscvParser.WS);
	            this.state = 167; 
	            this._errHandler.sync(this);
	            _la = this._input.LA(1);
	        } while(_la===28);
	        this.state = 169;
	        this.register();
	        this.state = 170;
	        this.match(uriscvParser.T__1);
	        this.state = 174;
	        this._errHandler.sync(this);
	        _la = this._input.LA(1);
	        while(_la===28) {
	            this.state = 171;
	            this.match(uriscvParser.WS);
	            this.state = 176;
	            this._errHandler.sync(this);
	            _la = this._input.LA(1);
	        }
	        this.state = 177;
	        this.register();
	        this.state = 178;
	        this.match(uriscvParser.T__1);
	        this.state = 182;
	        this._errHandler.sync(this);
	        _la = this._input.LA(1);
	        while(_la===28) {
	            this.state = 179;
	            this.match(uriscvParser.WS);
	            this.state = 184;
	            this._errHandler.sync(this);
	            _la = this._input.LA(1);
	        }
	        this.state = 185;
	        this.register();
	    } catch (re) {
	    	if(re instanceof antlr4.error.RecognitionException) {
		        localctx.exception = re;
		        this._errHandler.reportError(this, re);
		        this._errHandler.recover(this, re);
		    } else {
		    	throw re;
		    }
	    } finally {
	        this.exitRule();
	    }
	    return localctx;
	}



	addi() {
	    let localctx = new AddiContext(this, this._ctx, this.state);
	    this.enterRule(localctx, 18, uriscvParser.RULE_addi);
	    var _la = 0;
	    try {
	        this.enterOuterAlt(localctx, 1);
	        this.state = 187;
	        this.match(uriscvParser.T__5);
	        this.state = 189; 
	        this._errHandler.sync(this);
	        _la = this._input.LA(1);
	        do {
	            this.state = 188;
	            this.match(uriscvParser.WS);
	            this.state = 191; 
	            this._errHandler.sync(this);
	            _la = this._input.LA(1);
	        } while(_la===28);
	        this.state = 193;
	        this.register();
	        this.state = 194;
	        this.match(uriscvParser.T__1);
	        this.state = 198;
	        this._errHandler.sync(this);
	        _la = this._input.LA(1);
	        while(_la===28) {
	            this.state = 195;
	            this.match(uriscvParser.WS);
	            this.state = 200;
	            this._errHandler.sync(this);
	            _la = this._input.LA(1);
	        }
	        this.state = 201;
	        this.register();
	        this.state = 202;
	        this.match(uriscvParser.T__1);
	        this.state = 206;
	        this._errHandler.sync(this);
	        _la = this._input.LA(1);
	        while(_la===28) {
	            this.state = 203;
	            this.match(uriscvParser.WS);
	            this.state = 208;
	            this._errHandler.sync(this);
	            _la = this._input.LA(1);
	        }
	        this.state = 209;
	        this.immediate();
	    } catch (re) {
	    	if(re instanceof antlr4.error.RecognitionException) {
		        localctx.exception = re;
		        this._errHandler.reportError(this, re);
		        this._errHandler.recover(this, re);
		    } else {
		    	throw re;
		    }
	    } finally {
	        this.exitRule();
	    }
	    return localctx;
	}



	slt() {
	    let localctx = new SltContext(this, this._ctx, this.state);
	    this.enterRule(localctx, 20, uriscvParser.RULE_slt);
	    var _la = 0;
	    try {
	        this.enterOuterAlt(localctx, 1);
	        this.state = 211;
	        this.match(uriscvParser.T__6);
	        this.state = 213; 
	        this._errHandler.sync(this);
	        _la = this._input.LA(1);
	        do {
	            this.state = 212;
	            this.match(uriscvParser.WS);
	            this.state = 215; 
	            this._errHandler.sync(this);
	            _la = this._input.LA(1);
	        } while(_la===28);
	        this.state = 217;
	        this.register();
	        this.state = 218;
	        this.match(uriscvParser.T__1);
	        this.state = 222;
	        this._errHandler.sync(this);
	        _la = this._input.LA(1);
	        while(_la===28) {
	            this.state = 219;
	            this.match(uriscvParser.WS);
	            this.state = 224;
	            this._errHandler.sync(this);
	            _la = this._input.LA(1);
	        }
	        this.state = 225;
	        this.register();
	        this.state = 226;
	        this.match(uriscvParser.T__1);
	        this.state = 230;
	        this._errHandler.sync(this);
	        _la = this._input.LA(1);
	        while(_la===28) {
	            this.state = 227;
	            this.match(uriscvParser.WS);
	            this.state = 232;
	            this._errHandler.sync(this);
	            _la = this._input.LA(1);
	        }
	        this.state = 233;
	        this.register();
	    } catch (re) {
	    	if(re instanceof antlr4.error.RecognitionException) {
		        localctx.exception = re;
		        this._errHandler.reportError(this, re);
		        this._errHandler.recover(this, re);
		    } else {
		    	throw re;
		    }
	    } finally {
	        this.exitRule();
	    }
	    return localctx;
	}



	slti() {
	    let localctx = new SltiContext(this, this._ctx, this.state);
	    this.enterRule(localctx, 22, uriscvParser.RULE_slti);
	    var _la = 0;
	    try {
	        this.enterOuterAlt(localctx, 1);
	        this.state = 235;
	        this.match(uriscvParser.T__7);
	        this.state = 237; 
	        this._errHandler.sync(this);
	        _la = this._input.LA(1);
	        do {
	            this.state = 236;
	            this.match(uriscvParser.WS);
	            this.state = 239; 
	            this._errHandler.sync(this);
	            _la = this._input.LA(1);
	        } while(_la===28);
	        this.state = 241;
	        this.register();
	        this.state = 242;
	        this.match(uriscvParser.T__1);
	        this.state = 246;
	        this._errHandler.sync(this);
	        _la = this._input.LA(1);
	        while(_la===28) {
	            this.state = 243;
	            this.match(uriscvParser.WS);
	            this.state = 248;
	            this._errHandler.sync(this);
	            _la = this._input.LA(1);
	        }
	        this.state = 249;
	        this.register();
	        this.state = 250;
	        this.match(uriscvParser.T__1);
	        this.state = 254;
	        this._errHandler.sync(this);
	        _la = this._input.LA(1);
	        while(_la===28) {
	            this.state = 251;
	            this.match(uriscvParser.WS);
	            this.state = 256;
	            this._errHandler.sync(this);
	            _la = this._input.LA(1);
	        }
	        this.state = 257;
	        this.immediate();
	    } catch (re) {
	    	if(re instanceof antlr4.error.RecognitionException) {
		        localctx.exception = re;
		        this._errHandler.reportError(this, re);
		        this._errHandler.recover(this, re);
		    } else {
		    	throw re;
		    }
	    } finally {
	        this.exitRule();
	    }
	    return localctx;
	}



	sll() {
	    let localctx = new SllContext(this, this._ctx, this.state);
	    this.enterRule(localctx, 24, uriscvParser.RULE_sll);
	    var _la = 0;
	    try {
	        this.enterOuterAlt(localctx, 1);
	        this.state = 259;
	        this.match(uriscvParser.T__8);
	        this.state = 261; 
	        this._errHandler.sync(this);
	        _la = this._input.LA(1);
	        do {
	            this.state = 260;
	            this.match(uriscvParser.WS);
	            this.state = 263; 
	            this._errHandler.sync(this);
	            _la = this._input.LA(1);
	        } while(_la===28);
	        this.state = 265;
	        this.register();
	        this.state = 266;
	        this.match(uriscvParser.T__1);
	        this.state = 270;
	        this._errHandler.sync(this);
	        _la = this._input.LA(1);
	        while(_la===28) {
	            this.state = 267;
	            this.match(uriscvParser.WS);
	            this.state = 272;
	            this._errHandler.sync(this);
	            _la = this._input.LA(1);
	        }
	        this.state = 273;
	        this.register();
	        this.state = 274;
	        this.match(uriscvParser.T__1);
	        this.state = 278;
	        this._errHandler.sync(this);
	        _la = this._input.LA(1);
	        while(_la===28) {
	            this.state = 275;
	            this.match(uriscvParser.WS);
	            this.state = 280;
	            this._errHandler.sync(this);
	            _la = this._input.LA(1);
	        }
	        this.state = 281;
	        this.register();
	    } catch (re) {
	    	if(re instanceof antlr4.error.RecognitionException) {
		        localctx.exception = re;
		        this._errHandler.reportError(this, re);
		        this._errHandler.recover(this, re);
		    } else {
		    	throw re;
		    }
	    } finally {
	        this.exitRule();
	    }
	    return localctx;
	}



	slli() {
	    let localctx = new SlliContext(this, this._ctx, this.state);
	    this.enterRule(localctx, 26, uriscvParser.RULE_slli);
	    var _la = 0;
	    try {
	        this.enterOuterAlt(localctx, 1);
	        this.state = 283;
	        this.match(uriscvParser.T__9);
	        this.state = 285; 
	        this._errHandler.sync(this);
	        _la = this._input.LA(1);
	        do {
	            this.state = 284;
	            this.match(uriscvParser.WS);
	            this.state = 287; 
	            this._errHandler.sync(this);
	            _la = this._input.LA(1);
	        } while(_la===28);
	        this.state = 289;
	        this.register();
	        this.state = 290;
	        this.match(uriscvParser.T__1);
	        this.state = 294;
	        this._errHandler.sync(this);
	        _la = this._input.LA(1);
	        while(_la===28) {
	            this.state = 291;
	            this.match(uriscvParser.WS);
	            this.state = 296;
	            this._errHandler.sync(this);
	            _la = this._input.LA(1);
	        }
	        this.state = 297;
	        this.register();
	        this.state = 298;
	        this.match(uriscvParser.T__1);
	        this.state = 302;
	        this._errHandler.sync(this);
	        _la = this._input.LA(1);
	        while(_la===28) {
	            this.state = 299;
	            this.match(uriscvParser.WS);
	            this.state = 304;
	            this._errHandler.sync(this);
	            _la = this._input.LA(1);
	        }
	        this.state = 305;
	        this.shamt();
	    } catch (re) {
	    	if(re instanceof antlr4.error.RecognitionException) {
		        localctx.exception = re;
		        this._errHandler.reportError(this, re);
		        this._errHandler.recover(this, re);
		    } else {
		    	throw re;
		    }
	    } finally {
	        this.exitRule();
	    }
	    return localctx;
	}



	andInstr() {
	    let localctx = new AndInstrContext(this, this._ctx, this.state);
	    this.enterRule(localctx, 28, uriscvParser.RULE_andInstr);
	    var _la = 0;
	    try {
	        this.enterOuterAlt(localctx, 1);
	        this.state = 307;
	        this.match(uriscvParser.T__10);
	        this.state = 309; 
	        this._errHandler.sync(this);
	        _la = this._input.LA(1);
	        do {
	            this.state = 308;
	            this.match(uriscvParser.WS);
	            this.state = 311; 
	            this._errHandler.sync(this);
	            _la = this._input.LA(1);
	        } while(_la===28);
	        this.state = 313;
	        this.register();
	        this.state = 314;
	        this.match(uriscvParser.T__1);
	        this.state = 318;
	        this._errHandler.sync(this);
	        _la = this._input.LA(1);
	        while(_la===28) {
	            this.state = 315;
	            this.match(uriscvParser.WS);
	            this.state = 320;
	            this._errHandler.sync(this);
	            _la = this._input.LA(1);
	        }
	        this.state = 321;
	        this.register();
	        this.state = 322;
	        this.match(uriscvParser.T__1);
	        this.state = 326;
	        this._errHandler.sync(this);
	        _la = this._input.LA(1);
	        while(_la===28) {
	            this.state = 323;
	            this.match(uriscvParser.WS);
	            this.state = 328;
	            this._errHandler.sync(this);
	            _la = this._input.LA(1);
	        }
	        this.state = 329;
	        this.register();
	    } catch (re) {
	    	if(re instanceof antlr4.error.RecognitionException) {
		        localctx.exception = re;
		        this._errHandler.reportError(this, re);
		        this._errHandler.recover(this, re);
		    } else {
		    	throw re;
		    }
	    } finally {
	        this.exitRule();
	    }
	    return localctx;
	}



	andi() {
	    let localctx = new AndiContext(this, this._ctx, this.state);
	    this.enterRule(localctx, 30, uriscvParser.RULE_andi);
	    var _la = 0;
	    try {
	        this.enterOuterAlt(localctx, 1);
	        this.state = 331;
	        this.match(uriscvParser.T__11);
	        this.state = 333; 
	        this._errHandler.sync(this);
	        _la = this._input.LA(1);
	        do {
	            this.state = 332;
	            this.match(uriscvParser.WS);
	            this.state = 335; 
	            this._errHandler.sync(this);
	            _la = this._input.LA(1);
	        } while(_la===28);
	        this.state = 337;
	        this.register();
	        this.state = 338;
	        this.match(uriscvParser.T__1);
	        this.state = 342;
	        this._errHandler.sync(this);
	        _la = this._input.LA(1);
	        while(_la===28) {
	            this.state = 339;
	            this.match(uriscvParser.WS);
	            this.state = 344;
	            this._errHandler.sync(this);
	            _la = this._input.LA(1);
	        }
	        this.state = 345;
	        this.register();
	        this.state = 346;
	        this.match(uriscvParser.T__1);
	        this.state = 350;
	        this._errHandler.sync(this);
	        _la = this._input.LA(1);
	        while(_la===28) {
	            this.state = 347;
	            this.match(uriscvParser.WS);
	            this.state = 352;
	            this._errHandler.sync(this);
	            _la = this._input.LA(1);
	        }
	        this.state = 353;
	        this.immediate();
	    } catch (re) {
	    	if(re instanceof antlr4.error.RecognitionException) {
		        localctx.exception = re;
		        this._errHandler.reportError(this, re);
		        this._errHandler.recover(this, re);
		    } else {
		    	throw re;
		    }
	    } finally {
	        this.exitRule();
	    }
	    return localctx;
	}



	orInstr() {
	    let localctx = new OrInstrContext(this, this._ctx, this.state);
	    this.enterRule(localctx, 32, uriscvParser.RULE_orInstr);
	    var _la = 0;
	    try {
	        this.enterOuterAlt(localctx, 1);
	        this.state = 355;
	        this.match(uriscvParser.T__12);
	        this.state = 357; 
	        this._errHandler.sync(this);
	        _la = this._input.LA(1);
	        do {
	            this.state = 356;
	            this.match(uriscvParser.WS);
	            this.state = 359; 
	            this._errHandler.sync(this);
	            _la = this._input.LA(1);
	        } while(_la===28);
	        this.state = 361;
	        this.register();
	        this.state = 362;
	        this.match(uriscvParser.T__1);
	        this.state = 366;
	        this._errHandler.sync(this);
	        _la = this._input.LA(1);
	        while(_la===28) {
	            this.state = 363;
	            this.match(uriscvParser.WS);
	            this.state = 368;
	            this._errHandler.sync(this);
	            _la = this._input.LA(1);
	        }
	        this.state = 369;
	        this.register();
	        this.state = 370;
	        this.match(uriscvParser.T__1);
	        this.state = 374;
	        this._errHandler.sync(this);
	        _la = this._input.LA(1);
	        while(_la===28) {
	            this.state = 371;
	            this.match(uriscvParser.WS);
	            this.state = 376;
	            this._errHandler.sync(this);
	            _la = this._input.LA(1);
	        }
	        this.state = 377;
	        this.register();
	    } catch (re) {
	    	if(re instanceof antlr4.error.RecognitionException) {
		        localctx.exception = re;
		        this._errHandler.reportError(this, re);
		        this._errHandler.recover(this, re);
		    } else {
		    	throw re;
		    }
	    } finally {
	        this.exitRule();
	    }
	    return localctx;
	}



	ori() {
	    let localctx = new OriContext(this, this._ctx, this.state);
	    this.enterRule(localctx, 34, uriscvParser.RULE_ori);
	    var _la = 0;
	    try {
	        this.enterOuterAlt(localctx, 1);
	        this.state = 379;
	        this.match(uriscvParser.T__13);
	        this.state = 381; 
	        this._errHandler.sync(this);
	        _la = this._input.LA(1);
	        do {
	            this.state = 380;
	            this.match(uriscvParser.WS);
	            this.state = 383; 
	            this._errHandler.sync(this);
	            _la = this._input.LA(1);
	        } while(_la===28);
	        this.state = 385;
	        this.register();
	        this.state = 386;
	        this.match(uriscvParser.T__1);
	        this.state = 390;
	        this._errHandler.sync(this);
	        _la = this._input.LA(1);
	        while(_la===28) {
	            this.state = 387;
	            this.match(uriscvParser.WS);
	            this.state = 392;
	            this._errHandler.sync(this);
	            _la = this._input.LA(1);
	        }
	        this.state = 393;
	        this.register();
	        this.state = 394;
	        this.match(uriscvParser.T__1);
	        this.state = 398;
	        this._errHandler.sync(this);
	        _la = this._input.LA(1);
	        while(_la===28) {
	            this.state = 395;
	            this.match(uriscvParser.WS);
	            this.state = 400;
	            this._errHandler.sync(this);
	            _la = this._input.LA(1);
	        }
	        this.state = 401;
	        this.immediate();
	    } catch (re) {
	    	if(re instanceof antlr4.error.RecognitionException) {
		        localctx.exception = re;
		        this._errHandler.reportError(this, re);
		        this._errHandler.recover(this, re);
		    } else {
		    	throw re;
		    }
	    } finally {
	        this.exitRule();
	    }
	    return localctx;
	}


